k8s/manifests/zed-web-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zed-web-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [web.zpkg.net]
      secretName: zed-web-server-tls
  rules:
    - host: web.zpkg.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zed-web-server
                port:
                  number: 80
